# stockPulse

./: README.md  ecosystem.config.js  index.html  nginx.conf.example  package-lock.json  package.json  setup-linux.sh  tailwind.config.js  vite.config.js
backend/: README.md  package-lock.json  package.json  server-yfinance.js  server.js
python/: .env.example  config.py  db_schema.py  db_writer.py  idx_scraper.py  pyproject.toml  scrape_fundamentals.py
src/: App.jsx  index.css
src/components/: SettingsModal.jsx  Sidebar.jsx  TickerStrip.jsx  Topbar.jsx
src/data/: mockData.js
src/pages/: AnnouncementPage.jsx  CalculatorPage.jsx  ChartPage.jsx  Dashboard.jsx  FundamentalPage.jsx  NewsPage.jsx  Screener.jsx  TradingInfoPage.jsx  Watchlist.jsx  YfPricePage.jsx
src/services/: idxApi.js
src/store/: useStore.js
src/utils/: marketCalendar.js
