[project]
name = "stockpulse-scraper"
version = "0.1.0"
description = "IDX Fundamental Data Scraper for StockPulse"
requires-python = ">=3.11"

dependencies = [
    "curl-cffi>=0.7.0",       # HTTP client dengan browser emulation (TLS fingerprint)
    "sqlalchemy>=2.0",         # ORM / database toolkit
    "psycopg2-binary>=2.9",   # PostgreSQL adapter untuk Python
    "python-dotenv>=1.0",     # Baca file .env
    "pandas>=2.0",            # Opsional: ekspor CSV & analisis data
]

[project.optional-dependencies]
dev = [
    "ipykernel",              # Jupyter notebook support
    "rich",                   # Pretty logging di terminal
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Gunakan: uv sync  (untuk install semua dependency)
# Atau:    pip install -r requirements.txt
